@@ -2,6 +2,7 @@
 v4.0.0beta1
 -----------
 
+[jan] Add configuration example for Kolab/IMAP address books.
 [jan] Update icon set.
 [jan] Fix searching multiple names via the API.
 [jan] Fix searching and listing clients via the API.
